--- a/README.adoc
+++ b/README.adoc
@@ -2751,7 +2751,7 @@ exec xfce4-power-manager --no-daemon
 # pkill xfce4-volumed
 # exec xfce4-volumed --no-daemon
 
-pidof kmix >/dev/null 2>&1 || kmix
+# pidof kmix >/dev/null 2>&1 || kmix
 
 pkill pasystray ; pasystray
 
