--- a/README.adoc
+++ b/README.adoc
@@ -504,6 +504,8 @@ acme -a \
 
 ==== `term-emu` - wrapper for terminal emulator
 
+If X is not running, just run the command with the default Bourne-compatible shell.
+
 .file::term-emu
 [source,sh]
 ----
@@ -517,7 +519,11 @@ acme -a \
 
 term_emu_="${MY_TERM_EMU:-konsole}"
 
-exec "${term_emu_}" -e "$@"
+if using-x-p; then
+	exec "${term_emu_}" -e "$@"
+else
+	exec "${SHELL}" -c "$*"
+fi
 
 ----
 
