--- a/README.adoc
+++ b/README.adoc
@@ -1086,7 +1086,7 @@ prefix $comment_char^' '
 
 ----
 
-=== Keyboard layout
+=== Input device configuration
 
 Notes:
 
@@ -1131,44 +1131,105 @@ add <modifier> = <targeted-key>
 
 test -z "${DISPLAY}" && exit 0
 
-do-notify-short "Setting cmpitg's keyboard layout with Right Alt as AltGr"
+##############################################################################
+# Main
+##############################################################################
+#
+# References
+# * XKB rules: /usr/share/X11/xkb/rules/
+# * Arch Linux XKB page: https://wiki.archlinux.org/index.php/X_keyboard_extension
+#
+##############################################################################
+
+do-notify-short "Setting cmpitg's keyboard layout"
+
 setxkbmap us -variant dvp
 xmodmap <( cat <<EOF
+! -*- mode: xmodmap-generic -*-
 !
-! No mod5 by default
+! Notes:
+!
+! * Press a button → keyboard sends scancode → kernel generates a keycode → keyboard layout maps to a keysym
+!
+! * 'clear', 'add', and 'remove' commands are for modifiers
+!
+! * 'keysym' command is to map keysym.
+!
+! * To remap modifiers, first we need to remove the old keysyms, then assign them again.  That's why swapping is three-step:
+!   - Remove current mapping for modifiers
+!   - Swap the keysyms
+!   - Re-add the same mapping for modifiers
+!
+! * Modifiers:
+!   - 'control' is for Control
+!   - 'mod1' is for Alt/Meta
+!   - 'mod2' is for NumLock
+!   - 'mod3' is for Hyper
+!   - 'mod4' is for Super
+!   - 'mod5' is for ISO 3rd Level or Mode Switch
+!
+! evdev defs
+!
+!              |  Keycode |      Keysym      | XKB symbol |
+!--------------|----------|------------------|------------|
+!    Left Ctrl |       37 |        Control_L | LCTL       |
+!   Right Ctrl |      105 |        Control_R | RCTL       |
+!     Left Alt |       64 |            Alt_L | LALT       |
+!    Right Alt |      108 |            Alt_R | RALT       |
+!   Left Hyper |      207 |          Hyper_L | HYPR       |
+!  Right Hyper |      207 |          Hyper_R | HYPR       |
+!   Left Super |      206 |          Super_L | SUPR       |
+!  Right Super |      206 |          Super_R | SUPR       |
+!     Capslock |       66 |        Caps_Lock | CAPS       |
+!       Escape |        9 |           Escape | ESC        |
+!      Compose |      203 |        Multi_key | MDSW       |
+!       Level3 |       92 | ISO_Level3_Shift | LVL3       |
+!
+! * References
+!   - Keyboard input: https://wiki.archlinux.org/index.php/Keyboard_input
+!   - Keycodes: /usr/share/X11/xkb/keycodes/
 !
 
-clear mod5
-
 !
-! Swap Escape and Capslock keysyms
+! Swap Escape and Capslock {keycode → keysym} mapping
 !
 
-remove Lock = Caps_Lock
-keysym Caps_Lock = Escape
-keysym Escape = Caps_Lock
+! Pressing Capslock emits Escape
+keycode 66 = Escape
+
+! Pressing Escape emits Capslock
+keycode 9 = Caps_Lock
+! ! Pressing Escape emits Compose
+! keycode 9 = Multi_key
+
+! Keycode 66 still triggers Lock modifier, let's rebind it
+clear Lock
 add Lock = Caps_Lock
 
 !
-! Swap left Ctrl and Alt
+! Swap Ctrl and Alt
 !
 
-remove control = Control_L
-remove mod1 = Alt_L Meta_L
-keysym Control_L = Alt_L
-keysym Alt_L = Control_L
-add control = Control_L
+! Pressing Left Alt emits Left Ctrl
+keycode 64 = Control_L
+
+! Pressing Left Ctrl emits Left Alt
+keycode 37 = Alt_L
+
+! Pressing Right Alt emits Right Ctrl
+keycode 108 = Control_R
+
+! ! Pressing Right Ctrl emits Level3
+! keycode 105 = ISO_Level3_Shift
+! Pressing Right Ctrl emits Compose
+keycode 105 = Multi_key
+
+! Now, rearrange the modifiers
+clear control
+add control = Control_L Control_R
+clear mod1
 add mod1 = Alt_L
-
-!
-! Set right Ctrl as right Alt and right Alt as ISO 3rd level
-!
-
-remove control = Control_R
-remove mod1 = Alt_R Meta_R
-keysym Alt_R = Control_R
-keysym Control_R = ISO_Level3_Shift
-add control = Control_R
+clear mod5
 add mod5 = ISO_Level3_Shift
 
 ! Local Variables:
@@ -1178,108 +1239,17 @@ add mod5 = ISO_Level3_Shift
 EOF
 )
 
-----
-
-==== `config-keymap-standard` - keyboard layout: Programmer Dvorak + Ctrl-Alt swapped + CapsLock-Escape swapped
-
-.file::config-keymap-standard
-[source,sh]
-----
-#!/usr/bin/env bash
-
-test -z "${DISPLAY}" && exit 0
-
-##############################################################################
-
-do-notify-short "Setting cmpitg's keyboard layout"
-setxkbmap us -variant dvp
-xmodmap <( cat <<EOF
-! -*- mode: xmodmap-generic -*-
-!
-! Notes:
-!
-! * Press a button -> kernel generates a keycode -> maps to a keysym
-!
-! * 'clear', 'add', and 'remove' are for modifiers
-!
-! * To remap modifiers, first we need to remove the old keysyms, then assign them again.  That's why swapping is three-step:
-!   - Remove current mapping for modifiers
-!   - Swap the keysyms
-!   - Re-add the same mapping for modifiers
-!
-! * 'keysym' is to map keysym.  Generally, it's better to only touch keysyms.
-!
-! * Modifiers:
-!   - 'control' is for Control
-!   - 'mod1' is for Alt/Meta
-!   - 'mod2' is for NumLock
-!   - 'mod4' is for Super
-!   - 'mod5' is for ISO 3rd Level or Mode Switch
-!
-!            |  Keycode |    Keysym
-!------------|----------|-----------
-! Left  CTRL |       37 | Control_L
-! Left   ALT |       64 |     Alt_L
-! Right CTRL |      105 | Control_R
-! Right  ALT |      108 |     Alt_R
-!   Capslock |       66 | Caps_Lock
-!     Escape |        9 |    Escape
-!
-
-!
-! No mod5 by default
-!
-
-clear mod5
-
-!
-! Swap Escape and Capslock keysyms
-!
-
-remove Lock = Caps_Lock
-keysym Caps_Lock = Escape
-keysym Escape = Caps_Lock
-add Lock = Caps_Lock
-
-!
-! Swap left Ctrl and Alt
-!
-
-remove control = Control_L
-remove mod1 = Alt_L Meta_L
-keysym Control_L = Alt_L
-keysym Alt_L = Control_L
-add control = Control_L
-add mod1 = Alt_L
-
-!
-! Swap right Ctrl and Alt
-!
-
-remove control = Control_R
-remove mod1 = Alt_R Meta_R
-keysym Control_R = Alt_R
-keysym Alt_R = Control_R
-add control = Control_R
-add mod1 = Alt_R
-
-! Local Variables:
-! comment-start: "!"
-! End:
-
-EOF
-)
+xmodmap
 
 ----
 
-=== `config-inputs-cmpitg` - config keyboards, mice, ... all input devices
+==== `config-inputs-cmpitg` - config keyboards, mice, ... all input devices
 
 .file::config-inputs-cmpitg
 [source,sh]
 ----
 #!/usr/bin/env bash
 
-# config-keymap-standard
 config-keymap-altgr
 config-logitech-trackball-marble-righty
 # config-logitech-trackball-marble-lefty
@@ -1292,7 +1262,7 @@ config-extra-peripherals
 
 ----
 
-=== `config-keymap-steam` - keyboard layout: Programmer Dvorak without AltGr
+==== `config-keymap-steam` - keyboard layout: Programmer Dvorak without AltGr
 
 Because Steam doesn't work with swapped modifiers.
 
@@ -1343,11 +1313,11 @@ config-logitech-mx-ergo-right
 
 ----
 
-=== Config mouses & extra peripherals
+==== Config mice & extra peripherals
 
 Enables natural scrolling and tweaks acceleration profile.
 
-==== `config-extra-peripherals`
+===== `config-extra-peripherals`
 
 .file::config-extra-peripherals
 [source,sh]
@@ -1465,7 +1435,7 @@ check-xinput 'Logitech MX Vertical' && (
 
 ----
 
-==== `config-lenovo-n700-mouse`
+===== `config-lenovo-n700-mouse`
 
 .file::config-lenovo-n700-mouse
 [source,sh]
@@ -1500,7 +1470,7 @@ xinput set-prop "${id_}" "Device Accel Profile" 7
 
 ----
 
-==== `config-logitech-g300-mouse`
+===== `config-logitech-g300-mouse`
 
 Also, resets keyboard layout for G300 back to US QWERTY, so that
 kbd:[Ctrl+X/C/V] works as expected.
@@ -1545,7 +1515,7 @@ setxkbmap us -device "${keyboard_}"
 
 ----
 
-==== `config-logitech-g502-mouse`
+===== `config-logitech-g502-mouse`
 
 .file::config-logitech-g502-mouse
 [source,sh]
@@ -1589,7 +1559,7 @@ done
 
 ----
 
-==== `config-logitech-mx-ergo-right`
+===== `config-logitech-mx-ergo-right`
 
 .file::config-logitech-mx-ergo-right
 [source,sh]
@@ -1636,7 +1606,7 @@ done
 
 ----
 
-==== `config-logitech-trackball-marble-lefty`
+===== `config-logitech-trackball-marble-lefty`
 
 .file::config-logitech-trackball-marble-lefty
 [source,sh]
@@ -1730,7 +1700,7 @@ xinput set-prop "${id_}" "Device Accel Velocity Scaling" 5
 
 ----
 
-==== `config-logitech-trackball-marble-righty`
+===== `config-logitech-trackball-marble-righty`
 
 .file::config-logitech-trackball-marble-righty
 [source,sh]
@@ -1825,7 +1795,7 @@ xinput set-prop "${id_}" "Device Accel Velocity Scaling" 5
 
 ----
 
-==== `config-touchpad`
+===== `config-touchpad`
 
 Lots of tweaks, the code should be self-explanatory though.
 
