--- a/README.adoc
+++ b/README.adoc
@@ -2953,6 +2953,26 @@ exec rofi -lines 40 \
 
 ----
 
+==== Context-menu program
+
+.file::run-context-menu
+[source,sh]
+----
+#!/usr/bin/env sh
+
+enrich-path guix - with-env report-missing-executables sawfish Sawfish || exit 1
+
+menu_path_=$(enrich-path guix - with-env which sawfish \
+     | xargs -n 1 -I "{}" readlink -f "{}" \
+     | xargs -n 1 -I "{}" dirname "{}" \
+     | xargs -n 1 -I "{}" readlink -f "{}/../lib/sawfish/sawfish-menu")
+
+ls ${menu_path_}
+
+exec enrich-path guix - with-env "${menu_path_}" "$@"
+
+----
+
 ==== Application launcher
 
 .file::run-app-launcher
