--- a/README.adoc
+++ b/README.adoc
@@ -3146,7 +3146,7 @@ exec emacsclient --socket-name="${emacs_socket_name_}" --no-wait --create-frame 
 
 report-missing-executables tdrop tdrop || exit 1
 
-exec tdrop --auto-detect-wm --monitor-aware konsole
+exec tdrop -h 60% --auto-detect-wm --monitor-aware konsole
 
 ----
 
@@ -3159,7 +3159,7 @@ exec tdrop --auto-detect-wm --monitor-aware konsole
 
 report-missing-executables emacsclient-commander-for-dropdown emacsclient-commander-for-dropdown || exit 1
 
-exec tdrop --auto-detect-wm --monitor-aware emacsclient-commander-for-dropdown
+exec tdrop -h 60% --auto-detect-wm --monitor-aware emacsclient-commander-for-dropdown
 
 ----
 
