--- a/README.adoc
+++ b/README.adoc
@@ -3299,6 +3299,21 @@ proc tryOpeningFile {serverName inNewFrameP rest} {
     return 1
 }
 
+proc callWMClientMenu {wmName client} {
+    switch $wmName {
+        "awesome" {
+            execl awesome-client [list "display_client_menu_by_actionable_title('[string trim $client]')"]
+        }
+        "herbstluftwm" {
+            set winID [lindex [split [string trim $client] " "] end]
+            execl call-menu [list client $winID]
+        }
+        default {
+            execl run-menu [list "-e" "Error: Unrecognized window manager: $wmName"]
+        }
+    }
+}
+
 ##############################################################################
 # Main
 ##############################################################################
@@ -3356,15 +3371,8 @@ if {$text ne ""} {
             execl bring-termux-session $tmuxSessionName
         }
         "wind ::*" {
-            # TODO: Check current window manager?  Or write wrapper?
-            execl awesome-client [list "display_client_menu_by_actionable_title('[string trim $text]')"]
-        }
-        "wind-awesome ::*" {
-            execl awesome-client [list "display_client_menu_by_actionable_title('[string trim $text]')"]
-        }
-        "wind-i3 ::*" {
-            set nodeID [lindex [split [string trim $text] " "] end]
-            execl exec-i3-menu [list client $nodeID]
+            set wmName [exec enrich-path wm - get-wm-name]
+            callWMClientMenu $wmName $text
         }
         "file ::*" {
             set path [string trim [stripPrefix $text {file ::}]]
@@ -4617,7 +4625,24 @@ wget \
 
 ----
 
+=== `wm/` - utils for window manager (WM)
+
+==== `get-wm-name` - retrieves the current WM name
+
+.file::wm/get-wm-name
+[source,sh]
+----
+#!/usr/bin/env sh
+
+report-missing-executables wmctrl wmctrl || exit 1
+
+wmctrl -m | grep 'Name: ' | cut -d' ' -f2-
+
+----
+
 === `start-xephyr` - starts a Xephyr server (for debugging window manager)
+
+TODO: Review
 
 TODO: Help text
 
