--- a/README.adoc
+++ b/README.adoc
@@ -2494,7 +2494,7 @@ proc getAccessiblePaths {} {
     set res {}
     foreach path $rawPaths {
         if {[file exists $path]} {
-            lappend res "$path/"
+            lappend res "$path"
         }
     }
     return $res
