--- a/README.adoc
+++ b/README.adoc
@@ -2206,7 +2206,8 @@ qdbus org.freedesktop.Notifications &>/dev/null && notify-send "$@"
 report-missing-executables notify-send Libnotify || exit 1
 
 echo "$@"
-qdbus org.freedesktop.Notifications &>/dev/null && notify-send -t 2000 "$@"
+# qdbus org.freedesktop.Notifications &>/dev/null && notify-send -t 2000 "$@"
+qdbus org.freedesktop.Notifications &>/dev/null && notify-send "$@"
 
 ----
 
