--- a/README.adoc
+++ b/README.adoc
@@ -3448,7 +3448,7 @@ else
 	rmacs_server_alive_p_=0
 fi
 
-cat -s - \
+cat --squeeze-blank - \
 	<(tmux list-sessions -F "#{session_name}" | sed "s/^/tmux :: /g") \
 	<([[ "${rmacs_server_alive_p_}" = 1 ]] \
 		&& print $(rmacs --name "${rmacs_server_name_}" eval "(~format-opened-files)") | sed 's/^"//; s/"$//; s/^/file :: /g') \
